apps/next-react/src/styles/styles.css
@tailwind base;

@layer base {
  /* clear default iOS styling from inputs */
  input[type="text"] {
    @apply appearance-none;
  }

  a {
    @apply no-underline text-inherit;
  }
  button:focus {
    @apply outline-none;
  }
}

@tailwind components;

@tailwind utilities;

@layer utilities {
  @responsive {
    .fill-gold {
      fill: url(#paint0_linear);
    }
  }

  @variants dark {
    .border-t-gray-800 {
      border-top-color: theme("colors.gray.800");
    }
    .border-t-green-300 {
      border-top-color: theme("colors.green.300");
    }
    .border-t-gray-300 {
      border-top-color: theme("colors.gray.300");
    }
    .border-t-indigo-500 {
      border-top-color: theme("colors.indigo.500");
    }
    .border-t-cyan-400 {
      border-top-color: theme("colors.cyan.400");
    }
  }

  .no-spinners::-webkit-inner-spin-button,
  ::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  .modal-mobile-position {
    bottom: env(safe-area-inset-bottom, 0);
  }

  .modal-mobile-gap {
    bottom: 0;
    height: env(safe-area-inset-bottom, 0);
    position: fixed;
    width: 100%;
  }
}

@import "tippy.js/dist/tippy.css";
@import "emoji-mart/css/emoji-mart.css";

.emoji-mart-bar {
  @apply hidden;
}

